<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.gocourse.teacher.WelcomeActivity"
    >
    <ImageView
        android:id="@+id/iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_app_name"
        android:textColor="@color/def_tool_bar_bg_light"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/iv"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_login"
            android:layout_marginRight="40dp"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:background="@color/def_tool_bar_bg_light"
            android:height="50dp"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_register"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:background="@color/def_tool_bar_bg_light"
            android:height="50dp"/>
    </LinearLayout>

</RelativeLayout>
